--- a/indexusa.html
+++ b/indexusa.html
@@ -222,10 +222,17 @@
 					<p class="f-white">Alfredo Andrade</p>
 				</div>
 				<div>
-					<a href="" target="_blank">
-						<img src="midia/img/atletas/anderson_da_silva.jpg" class="img-fluid img-carousel">
+					<a href=" https://ligamx.net/cancha/jugador/117591/eyJpZENsdWIiOiAxMzM3fQ==/alejandro-andrade-rivera" target="_blank">
+						<img src="midia/img/atletas/alejandro_andrade.jpg" class="img-fluid img-carousel">
 					</a>
-					<p class="f-white">Anderson da Silva</p>
+					<p class="f-white">Alejandro Andrade</p>
+				</div>
+				<div>
+					<a href="https://www.youtube.com/watch?v=AM0bZA1u2lY&t=4s" target="_blank">
+						<img src="midia/img/atletas/bruno_pires.jpg" class="img-fluid img-carousel">
+					</a>
+					<p class="f-white">Bruno Pirri</p>
+					<a href="bruno_arq.pdf" target="_blank" class="f-white hvr-underline-from-center">Datas</a>
 				</div>
 				<div>
 					<a href="https://www.ligabancomer.mx/cancha/jugador/112146/eyJpZENsdWIiOiA1OX0=/edgar-abraham-soto-gonzalez" target="_blank">
@@ -234,35 +241,18 @@
 					<p class="f-white">Edgar Soto</p>
 				</div>
 				<div>
-					<a href="https://www.youtube.com/watch?v=k_m9YyFuFMo" target="_blank">
-						<img src="midia/img/atletas/bruno_pires.jpg" class="img-fluid img-carousel">
-					</a>
-					<p class="f-white">Bruno Pirri</p>
-				</div>
-				<div>
-					<a href="https://www.youtube.com/watch?v=Kv0rO3oH4DA" target="_blank">
-						<img src="midia/img/atletas/edinho_granja.jpg" class="img-fluid img-carousel">
-					</a>
-					<p class="f-white">Edinho Granja</p>
-				</div>
-				<div>
 					<a href="http://ligamx.net/cancha/jugador/112141/eyJpZENsdWIiOiAxMDk4N30=/eduardo-andrade-rivera" target="_blank">
 						<img src="midia/img/atletas/eduardo_andrade.jpg" class="img-fluid img-carousel">
 					</a>
 					<p class="f-white">Eduardo Andrade</p>
+				
 				</div>
 				<div>
-					<a href="https://www.youtube.com/watch?v=mltvEE1nEVo&feature=youtu.be" target="_blank">
+					<a href="https://www.youtube.com/watch?v=RUOiycM6kVE" target="_blank">
 						<img src="midia/img/atletas/elsinho.jpg" class="img-fluid img-carousel">
 					</a>
 					<p class="f-white">Elsinho</p>
-					<a href="https://www.facebook.com/MegaTeam-Consultoria-Esportiva-184934391603753/" target="_blank"><p class="f-white">Mega Team</p></a>
-				</div>
-				<div>
-					<a href="https://www.youtube.com/watch?v=qOIYxwUR63E&feature=youtu.be" target="_blank">
-						<img src="midia/img/atletas/gustavo_neves.jpg" class="img-fluid img-carousel">
-					</a>
-					<p class="f-white">Gustavo Neves</p>
+					<a href="elsinho_arq.pdf" target="_blank" class="f-white hvr-underline-from-center">Datas</a>
 				</div>
 				<div>
 					<a href="http://ligamx.net/cancha/jugador/116814/eyJpZENsdWIiOiAxMDk4N30=/julio-tereso-padilla-estrada" target="_blank">
@@ -275,13 +265,7 @@
 						<img src="midia/img/atletas/leandro_carrijo.jpg" class="img-fluid img-carousel">
 					</a>
 					<p class="f-white">Leandro Carrijo</p>
-					<a href="https://www.facebook.com/MegaTeam-Consultoria-Esportiva-184934391603753/" target="_blank"><p class="f-white">Mega Team</p></a>
-				</div>
-				<div>
-					<a href="https://www.youtube.com/watch?v=mfxlBIpUfPU&feature=youtu.be" target="_blank">
-						<img src="midia/img/atletas/luis_omar.jpg" class="img-fluid img-carousel">
-					</a>
-					<p class="f-white">Luis Omar Hernández</p>
+					<a href="leandro_arq.pdf" target="_blank" class="f-white hvr-underline-from-center">Datas</a>
 				</div>
 				<div>
 					<a href="https://www.youtube.com/watch?v=KETrad7nNp8&feature=youtu.be" target="_blank">
@@ -290,11 +274,11 @@
 					<p class="f-white">Marcus Vinicius</p>
 				</div>
 				<div>
-					<a href="https://www.youtube.com/watch?v=tngdOYPNnuU&feature=youtu.be" target="_blank">
+					<a href="https://www.youtube.com/watch?v=ZDnt6CSkzYs&t=2s" target="_blank">
 						<img src="midia/img/atletas/matheuzinho.jpg" class="img-fluid img-carousel">
 					</a>
 					<p class="f-white">Matheuzinho</p>
-					<a href="https://www.transfermarkt.com/aki-amp-desiderio-sports/beraterfirma/berater/5082" target="_blank"><p class="f-white">Aki&Desiderio</p></a>
+					<a href="matheuzinho_arq.pdf" target="_blank" class="f-white hvr-underline-from-center">Datas</a>
 				</div>
 				<div>
 					<a href="http://www.ligabancomer.mx/cancha/jugador/77481" target="_blank">
@@ -303,28 +287,30 @@
 					<p class="f-white">Raul Vidal</p>
 				</div>
 				<div>
+					<a href="https://www.youtube.com/watch?v=EZMFfufC6JU" target="_blank">
+						<img src="midia/img/atletas/ryan_granja.jpeg" class="img-fluid img-carousel">
+					</a>
+					<p class="f-white">Ryan Granja</p>
+				</div>
+				<div>
 					<a href="https://www.youtube.com/watch?v=I6ZECDZ3b9Y&feature=youtu.be" target="_blank">
 						<img src="midia/img/atletas/salvador_gonzalez.jpg" class="img-fluid img-carousel">
 					</a>
 					<p class="f-white">Salvador Gonzalez</p>
+					<a href="salvador_arq.pdf" target="_blank" class="f-white hvr-underline-from-center">Datas</a>
 				</div>
 				<div>
-					<a href="" target="_blank">
-						<img src="midia/img/atletas/yohan_ferreria.jpg" class="img-fluid img-carousel">
+					<a href="https://www.youtube.com/watch?v=E-iVMlGcfhc&t=5s" target="_blank">
+						<img src="midia/img/atletas/tata.jpg" class="img-fluid img-carousel">
 					</a>
-					<p class="f-white">Yohan Ferreira</p>
+					<p class="f-white">Tatá</p>
 				</div>
 				<div>
 					<a href="https://www.youtube.com/watch?v=PD81JgT9Da4" target="_blank">
 						<img src="midia/img/atletas/yuber_asprillas.jpg" class="img-fluid img-carousel">
 					</a>
 					<p class="f-white">Yuber Asprilla</p>
-				</div>
-				<div>
-					<a href="https://ligamx.net/cancha/jugador/86149/miguel-angel-quintanilla-mata" target="_blank">
-						<img src="midia/img/atletas/miguel_quintanilla.jpg" class="img-fluid img-carousel">
-					</a>
-					<p class="f-white">Miguel Quintanilla</p>
+					<a href="yuber_arq.pdf" target="_blank" class="f-white hvr-underline-from-center">Datas</a>
 				</div>
 			</div>
 		</div>
